backport: re PR rtl-optimization/12965 (SEGV+ICE in cc1plus on alpha-linux with -O2)

Backport from mainline:

	2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/12965
	* caller-save.c (save_call_clobbered_regs): Do not save/restore
	registers around no-return calls.

From-SVN: r74530